syntax = "proto3";
option csharp_namespace = "MinimalGRPC";
package grpcProto;

service WeatherProto {
  rpc GetWeatherForecast (WeatherForecastRequest) returns (WeatherForecastReply);
}

message WeatherForecastRequest {
}

message WeatherDay{
    string date=1;
    int32 temperatureC=2;
    string summary=3;
}

message WeatherForecastReply{
	repeated WeatherDay weatherList = 1;
}
